# app/serializers/api/v1/draft_serializer.rb
@@ -8,7 +8,8 @@ module Api
       set_id :public_id
       set_type :draft
 
-      attributes :title, :content, :autosaved_at, :created_at, :updated_at
+      attributes :title, :content, :content_json, :content_html, :content_text,
+                 :autosaved_at, :created_at, :updated_at
 
       attribute :metadata do |draft|
         draft.metadata || {}
